--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >Hi JavaScript basic</h1>
+    <div class="heading"></div>
+    <div class="heading"></div>
+    <div class="heading"></div>
+    <h1 id="heading">Hi JavaScript basic</h1>
+    <div class="box">
+        <h2 class="heading-2"></h2>
+        <a href="" class="" name="he"></a>
+    </div>
+    <div class="box-1">
+        <ul>
+            <li>JavaScript-1</li>
+            <li>PHP-1</li>
+        </ul>
+    </div>
+    <div class="box-2">
+        <ul>
+            <li>JavaScript-2</li>
+            <li>PHP-2</li>
+        </ul>
+    </div>
+    <form action="" id="form-1"></form>
+    <form action="" id="textForm"></form>
     <script src="main.js"></script>
+   
 </body>
 </html>
