--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="heading"></div>
+    <!-- <div class="heading"></div>
     <div class="heading"></div>
     <div class="heading"></div>
     <h1 id="heading">Hi JavaScript basic</h1>
@@ -27,7 +27,9 @@
         </ul>
     </div>
     <form action="" id="form-1"></form>
-    <form action="" id="textForm"></form>
+    <form action="" id="textForm"></form> -->
+
+    <h1>Heading-1</h1>
     <script src="main.js"></script>
    
 </body>
