fix error in practice

--- a/practice(2).html
+++ b/practice(2).html
@@ -16,19 +16,19 @@
 
                 <div class="spacer"></div>
 
-                <div class="form-group invalid">
+                <div class="form-group ">
                     <label for="fullname" class="form-label">Tên đầy đủ</label>
                     <input id = "fullname" name = "fullname" rules = "required" type="text" placeholder="VD: Khiêm Trần" class = "form-control">
                     <span class="form-message"></span>
                 </div>
 
-                <div class="form-group invalid">
+                <div class="form-group ">
                     <label for="email" class="form-label">Email</label>
                     <input id = "email" name = "email" rules = "required|email" type="text" placeholder="VD: email@gmail.com" class = "form-control">
                     <span class="form-message"></span>
                 </div>
 
-                <div class="form-group invalid">
+                <div class="form-group ">
                     <label for="password" class="form-label">Mật khẩu</label>
                     <input id = "password" name = "password" rules = "required|min:6" type="password" placeholder="Nhập lại mật khẩu" class = "form-control">
                     <span class="form-message"></span>
@@ -41,7 +41,7 @@
         <script src="validator(2).js"></script>
         <script>
             //1.Mong muốn / Kỳ vộng / Thành quả đạt được ==> Output là gì?
-            var form = new Validator('#register-form');
+            var form = new Validator ('#register-form');
             form.onSubmit = function (formData ) {
                 console.log(formData)
             }
