--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 DIV
                 <button>Click me!</button>
              </div> -->
-             <button id = "btn">Click me!</button>
+             <!-- <button id = "btn">Click me!</button> -->
              <script src="main.js"></script>
     </body>
 </html>
