--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi,I am Khiem</title>
-    <style>
+    <!-- <style> Báo thế cha
+
         ul{
             display: none;
         }
@@ -12,7 +13,7 @@
         input:focus~ul{
             display: block;
         }
-    </style>
+    </style> -->
 </head>
     <body>
              <!-- <div class="heading"></div>
@@ -112,6 +113,9 @@
                 <button>Click me!</button>
              </div> -->
              <!-- <button id = "btn">Click me!</button> -->
+
+            <ul id="post-block"></ul>
+
              <script src="main.js"></script>
     </body>
 </html>
